add sub-navbar,heroSection and  utility styles; include new icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/utility.css">
   <link rel="stylesheet" href="css/variables.css">
   <link rel="stylesheet" href="css/styles.css">
   
@@ -58,6 +59,106 @@
       </nav>
     </div>
   </header>
+  <nav class="sub-navbar">
+    <div class="sub-navbar-container">
+        
+        <ul class="sub-nav-links left-nav normal-text">
+            <li>
+                <a href="#" class="category-trigger">
+                    <img src="assets/icons/hamburger.png" alt="manu icon" width="20px">
+                    <span>All category</span>
+                </a>
+            </li>
+            <li><a href="#">Hot offers</a></li>
+            <li><a href="#">Gift boxes</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Menu item</a></li>
+            <li>
+               <select name="help" id="help">
+                    <option value="help">Help</option>
+                    <option value="track-order">Track Order</option>
+                    <option value="returns">Returns</option>
+                    <option value="shipping">Shipping</option>
+                    <option value="faqs">FAQs</option>
+                    <!-- <img src="assets/Layout/Form/input-group/Icon/control/Vector.png" alt="dropdown down icon"> -->
+               </select>
+            </li>
+        </ul>
+        <ul class="nav-links right-nav">
+          <li>
+            <select name="language" id="language">
+              <option value="english">English, USD</option>
+              <option value="spanish">Spanish, EUR</option>
+              <option value="french">French, EUR</option>
+            </select>
+          </li>
+          <li>
+            <select name="ship-to" id="ship-to">
+              ship-to
+              <option value="usa">
+                Ship to 
+              </option>
+              <option value="uk"></option>
+              <option value="germany"></option>
+            </select>
+          </li>
+        </ul>
+        <!-- <ul class="nav-links right-nav">
+            <li>
+                <a href="#">English, USD <i class="fa-solid fa-chevron-down"></i></a>
+            </li>
+            <li>
+                <a href="#" class="ship-to">
+                    Ship to 
+                    <img src="https://flagcdn.com/w20/de.png" alt="Germany Flag">
+                    <i class="fa-solid fa-chevron-down"></i>
+                </a>
+            </li>
+        </ul> -->
 
+    </div>
+</nav>
+
+<div class="main-container">
+  <div class="hero-container">
+    <nav>
+      <ul>
+        <li>kljljk</li>
+        <li>jkjl</li>
+        <li>jklj</li>
+        <li>kljljk</li>
+        <li>kljljk</li>
+        <li>kjkjklj</li>
+        <li>jkjlj</li>
+        <li>kjkj</li>
+        <li>wwwwww</li>
+      </ul>
+    </nav>
+    <div class="main-banner">
+      <h3>Latest Trending</h3>
+      <h2>Electronics Items</h2>
+      <button class="learn-more">Learn More</button>
+    </div>
+    <div class="left-main-box">
+    <div class="user">
+      <div class="profile flex">
+        <div class="profile-pic">
+          <img src="assets/icons/profile2.png" alt=""width="28px">
+        </div>
+        <p>HI user</p>
+      </div>
+      <button class="join-now normal-text" >Join Now</button>
+      <button class="logIn normal-text">Log In</button>
+    </div>
+    <div class="discount normal-text">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, qui?
+
+    </div>
+    <div class="suplier normal-text">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+    </div>
+</div>
+  </div>
+</div>
 </body>
 </html>
