--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
                 
                 <div class="form-group">
                     <label for="item-name" class="visually-hidden">Item name</label>
-                    <input type="text" id="item-name" name="item_name" placeholder="What item you need?" required>
+                    <input type="text" class="input" id="item-name" name="item_name" placeholder="What item you need?" required>
                 </div>
 
                 <div class="form-group">
-                                      <textarea id="details" name="details" placeholder="Type more details" rows="3"></textarea>
+                                      <textarea class="textarea" id="details" name="details" placeholder="Type more details" rows="3"></textarea>
                 </div>
 
                 <div class="form-row">
@@ -371,7 +371,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <select id="unit" name="unit">
+                        <select id="unit" name="unit" class=".select">
                             <option value="pcs">Pcs</option>
                             <option value="kg">Kg</option>
                             <option value="box">Box</option>
