--- a/pages/proGrid.html
+++ b/pages/proGrid.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/proGrid.css">
   <link rel="stylesheet" href="../css/variables.css">
   <title>Document</title>
 </head>
 <body>
+    <div class="header-placeholder"></div>
+    <div class="sub-navbar-placeholder"></div>
   <section class="grid-view-section">
     
     <div class="active-filters-bar">
@@ -221,5 +224,33 @@
         </article>
     </div>
 </section>
+<div class="newslatter-placeholder"></div>
+<div class="footer-placeholder"></div>
+<script>
+    // Load Header Component
+    fetch('/components/header.html')
+        .then(response => response.text())
+        .then(data => {
+        document.querySelector('.header-placeholder').innerHTML = data;
+        });
+    // Load Sub NavBar Component
+    fetch('/components/subNavBar.html')
+        .then(response => response.text())
+        .then(data => {
+        document.querySelector('.sub-navbar-placeholder').innerHTML = data;
+        });
+    // Load Newsletter Component
+    fetch('/components/newslatter.html')
+        .then(response => response.text())
+        .then(data => {
+        document.querySelector('.newslatter-placeholder').innerHTML = data;
+        });
+    // Load Footer Component
+    fetch('/components/footer.html')
+        .then(response => response.text())
+        .then(data => {
+        document.querySelector('.footer-placeholder').innerHTML = data;
+        });
+</script>
 </body>
 </html>
