--- a/pages/productListing.html
+++ b/pages/productListing.html
@@ -16,111 +16,8 @@
   <title>Document</title>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <div class="logo">
-        <img src="..\assets\Layout\Brand\logo-colored.png" alt="logo">
-      </div>
-      <form action="">
-        <div class="search-bar">
-          <input type="search" name="search" id="search" placeholder="Search">
-          <select name="category" id="category">
-            <option value="all">All category</option>
-            <option value="electronics">electronics</option>
-            <option value="fashion">Fashion</option>
-          </select>
-          <button type="submit" class="search-btn">Search</button>
-          </div>
-      </form>
-      <nav class="user-nav">
-        <ul class="user-links">
-          <li>
-            <a href="http://">
-              <img src="../assets/icons/profile.png " alt="profile icon">
-            </a>
-            <span>Profile</span>
-          </li>
-          <li>
-            <a href="http://">
-              <img src="../assets/icons/massage.png" alt="massage icon">
-            </a>
-            <span>Massage</span>
-          </li>
-          <li>
-            <a href="http://">
-              <img src="../assets/icons/order.png" alt="order icon ">
-            </a>
-            <span>Order</span>
-          </li>
-          <li>
-            <a href="http://">
-              <img src="../assets/icons/cart.png" alt="cart icon">
-            </a>
-            <span>My Cart</span>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <nav class="sub-navbar">
-    <div class="sub-navbar-container">
-        
-        <ul class="sub-nav-links left-nav normal-text">
-            <li>
-                <a href="#" class="category-trigger">
-                    <img src="../assets/icons/hamburger.png" alt="manu icon" width="20px">
-                    <span>All category</span>
-                </a>
-            </li>
-            <li><a href="#">Hot offers</a></li>
-            <li><a href="#">Gift boxes</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Menu item</a></li>
-            <li>
-               <select name="help" id="help">
-                    <option value="help">Help</option>
-                    <option value="track-order">Track Order</option>
-                    <option value="returns">Returns</option>
-                    <option value="shipping">Shipping</option>
-                    <option value="faqs">FAQs</option>
-                    <!-- <img src="assets/Layout/Form/input-group/Icon/control/Vector.png" alt="dropdown down icon"> -->
-               </select>
-            </li>
-        </ul>
-        <ul class="nav-links right-nav">
-          <li>
-            <select name="language" id="language">
-              <option value="english">English, USD</option>
-              <option value="spanish">Spanish, EUR</option>
-              <option value="french">French, EUR</option>
-            </select>
-          </li>
-          <li>
-            <select name="ship-to" id="ship-to">
-              ship-to
-              <option value="usa">
-                Ship to 
-              </option>
-              <option value="uk"></option>
-              <option value="germany"></option>
-            </select>
-          </li>
-        </ul>
-        <!-- <ul class="nav-links right-nav">
-            <li>
-                <a href="#">English, USD <i class="fa-solid fa-chevron-down"></i></a>
-            </li>
-            <li>
-                <a href="#" class="ship-to">
-                    Ship to 
-                    <img src="https://flagcdn.com/w20/de.png" alt="Germany Flag">
-                    <i class="fa-solid fa-chevron-down"></i>
-                </a>
-            </li>
-        </ul> -->
-
-    </div>
-</nav>
+  <div class="header-placeholder"></div>
+    <div class="subnavbar-placeholder"></div>
 <main class="main-listing">
   <nav aria-label="breadcrumb" class="breadcrumb-nav">
     <div class="breadcrumb-list-container">
@@ -487,5 +384,25 @@
     </main>
 </div>
 </main>
+<div class="newslatter-placeholder">
+</div>
+<div class="footerplaceholder"></div>
+<script>
+fetch('../components/header.html')
+    .then(response => response.text())
+    .then(data => document.querySelector('.header-placeholder').innerHTML = data);
+
+fetch('../components/subnavbar.html')
+    .then(response => response.text())
+    .then(data => document.querySelector('.subnavbar-placeholder').innerHTML = data);
+
+fetch('../components/newslatter.html')
+    .then(response => response.text())
+    .then(data => document.querySelector('.newslatter-placeholder').innerHTML = data);
+
+fetch('../components/footer.html')
+    .then(response => response.text())
+    .then(data => document.querySelector('.footerplaceholder').innerHTML = data);
+</script>
 </body>
 </html>
