implement category listing and toggle view functionality in product listing page

--- a/index.html
+++ b/index.html
@@ -20,16 +20,8 @@
 <div class="main-container">
   <div class="hero-container">
     <nav>
-      <ul>
-        <li>kljljk</li>
-        <li>jkjl</li>
-        <li>jklj</li>
-        <li>kljljk</li>
-        <li>kljljk</li>
-        <li>kjkjklj</li>
-        <li>jkjlj</li>
-        <li>kjkj</li>
-        <li>wwwwww</li>
+      <ul id="category-list-navigation">
+      
       </ul>
     </nav>
     <div class="main-banner normal-text">
