update cart layout and fix class naming for consistency

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header-placeholder"></div>
   <section class="cart-section">
-    <div class="container">
+    <div class="cart-container">
         
         <h2>My cart (3)</h2>
 
@@ -268,5 +268,6 @@
         document.querySelector('.footer-placeholder').innerHTML = data;
         });
 </script>
+<script src="/script/main.js"></script>
 </body>
 </html>
