--- a/pages/productListing.html
+++ b/pages/productListing.html
@@ -280,7 +280,7 @@
                 <div class="card-details">
                     <div class="card-header">
                         <h4>GoPro HERO6 4K Action Camera - Black</h4>
-                        <button class="btn-fav">
+                        <button class="btn-fav" ">
                             <img src="../assets/icons/heart.png" alt="Fav">
                         </button>
                     </div>
