add some icons like socail link in footer and enhanced main.js to implement a save for later feature and render saved items in the cart.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </section>
 <section class="category-section">
   <div class="category-container">
-    <article class="main-category">
+    <article class="main-category home-and-outdoor-main-category">
       <h2>Home and outdoor</h2>
       <button>Source now</button>
     </article>
@@ -89,8 +89,8 @@
 </section>
 <section class="category-section " id="electronics">
   <div class="category-container" id="electronics-container">
-    <article class="main-category">
-      <h2>Home and outdoor</h2>
+    <article class="main-category electronics-main-category">
+      <h2>Consumer electronics and gadgets</h2>
       <button>Source now</button>
     </article>
     <div class="category-grid" id ="electronics-grid"></div>
@@ -160,6 +160,30 @@
   <div class="extra-services-container">
     <h3>Our extra services</h3>
     <div class="extra-services-items">
+      <article class="extra-service-item">
+        <div class="bg-image-section">
+        </div>
+        <p>Source and industry hub</p>
+        <div class="icon">
+          <img src="assets/icons/control/Vector-1.png" width="24px" alt="">
+        </div>
+      </article>
+      <article class="extra-service-item">
+        <div class="bg-image-section">
+        </div>
+        <p>Source and industry hub</p>
+        <div class="icon">
+          <img src="assets/icons/control/Vector-1.png" width="24px" alt="">
+        </div>
+      </article>
+      <article class="extra-service-item">
+        <div class="bg-image-section">
+        </div>
+        <p>Source and industry hub</p>
+        <div class="icon">
+          <img src="assets/icons/control/Vector-1.png" width="24px" alt="">
+        </div>
+      </article>
       <article class="extra-service-item">
         <div class="bg-image-section">
         </div>
