--- a/pages/cart.html
+++ b/pages/cart.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=shopping_cart" />
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="../css/cart.css">
-  <link rel="stylesheet" href="../css/variables.css">
+  <link rel="stylesheet" href="/css/cart.css">
+  <link rel="stylesheet" href="/css/variables.css">
+    <link rel="stylesheet" href="/css/utility.css">
   <link rel="stylesheet" href="/css/productDetail.css">
   <title>Document</title>
 </head>
@@ -102,16 +105,16 @@
                 </article>
 
                 <div class="cart-actions-row">
-                    <a href="#" class="btn-back-shop">
-                        <img src="../assets/icons/arrow-left.png" alt="back"> Back to shop
+                    <a href="/index.html" class="btn-back-shop">
+                        <i class="fa-solid fa-arrow-left"></i> Back to shop
                     </a>
-                    <button class="btn-remove-all">Remove all</button>
+                    <button class="btn-remove-all ">Remove all</button>
                 </div>
 
                 <div class="service-features">
                     <div class="feature-item">
                         <div class="icon-circle">
-                            <img src="../assets/icons/lock.png" alt="secure">
+                           <i class="fa-solid fa-lock opacity"></i>
                         </div>
                         <div class="feature-text">
                             <strong>Secure payment</strong>
@@ -120,7 +123,7 @@
                     </div>
                     <div class="feature-item">
                         <div class="icon-circle">
-                            <img src="../assets/icons/chat.png" alt="support">
+                            <i class="fa-solid fa-comment-dots opacity"></i>
                         </div>
                         <div class="feature-text">
                             <strong>Customer support</strong>
@@ -129,7 +132,7 @@
                     </div>
                     <div class="feature-item">
                         <div class="icon-circle">
-                            <img src="../assets/icons/truck.png" alt="delivery">
+                            <i class="fa-solid fa-truck opacity "></i>
                         </div>
                         <div class="feature-text">
                             <strong>Free delivery</strong>
@@ -177,11 +180,11 @@
                 <button class="btn-checkout">Checkout</button>
 
                 <div class="payment-icons">
-                    <img src="../assets/icons/pay-amex.png" alt="Amex">
-                    <img src="../assets/icons/pay-master.png" alt="Mastercard">
-                    <img src="../assets/icons/pay-paypal.png" alt="Paypal">
-                    <img src="../assets/icons/pay-visa.png" alt="Visa">
-                    <img src="../assets/icons/pay-apple.png" alt="ApplePay">
+                    <img src="/assets/icons/payment/Logo.png" alt="Amex">
+                    <img src="/assets/icons/payment/Logo-1.png" alt="Mastercard">
+                    <img src="/assets/icons/payment/Logo-2.png" alt="Paypal">
+                    <img src="/assets/icons/payment/Logo-3.png" alt="Visa">
+                    <img src="/assets/icons/payment/image 21.png" alt="ApplePay">
                 </div>
 
             </aside>
@@ -189,61 +192,7 @@
 
         <section class="saved-later-section">
             <h3>Saved for later</h3>
-            
             <div class="saved-grid">
-                
-                <article class="saved-card">
-                    <div class="saved-img">
-                        <img src="../assets/products/tablet.png" alt="Tablet">
-                    </div>
-                    <div class="saved-info">
-                        <span class="saved-price">$99.50</span>
-                        <h4 class="saved-title">GoPro HERO6 4K Action Camera - Black</h4>
-                        <button class="btn-move-cart">
-                            <img src="../assets/icons/cart-blue.png" alt="cart"> Move to cart
-                        </button>
-                    </div>
-                </article>
-
-                <article class="saved-card">
-                    <div class="saved-img">
-                        <img src="../assets/products/iphone-blue.png" alt="Phone">
-                    </div>
-                    <div class="saved-info">
-                        <span class="saved-price">$99.50</span>
-                        <h4 class="saved-title">GoPro HERO6 4K Action Camera - Black</h4>
-                        <button class="btn-move-cart">
-                            <img src="../assets/icons/cart-blue.png" alt="cart"> Move to cart
-                        </button>
-                    </div>
-                </article>
-
-                <article class="saved-card">
-                    <div class="saved-img">
-                        <img src="../assets/products/smartwatch.png" alt="Watch">
-                    </div>
-                    <div class="saved-info">
-                        <span class="saved-price">$99.50</span>
-                        <h4 class="saved-title">GoPro HERO6 4K Action Camera - Black</h4>
-                        <button class="btn-move-cart">
-                            <img src="../assets/icons/cart-blue.png" alt="cart"> Move to cart
-                        </button>
-                    </div>
-                </article>
-
-                <article class="saved-card">
-                    <div class="saved-img">
-                        <img src="../assets/products/laptop.png" alt="Laptop">
-                    </div>
-                    <div class="saved-info">
-                        <span class="saved-price">$99.50</span>
-                        <h4 class="saved-title">GoPro HERO6 4K Action Camera - Black</h4>
-                        <button class="btn-move-cart">
-                            <img src="../assets/icons/cart-blue.png" alt="cart"> Move to cart
-                        </button>
-                    </div>
-                </article>
-
             </div>
         </section>
     </div>
