--- a/pages/productListing.html
+++ b/pages/productListing.html
@@ -8,11 +8,11 @@
 <link rel="stylesheet" href="cdnjs.cloudflare.com" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Permanent+Marker&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/variables.css">
-  <link rel="stylesheet" href="../css/utility.css">
-  <link rel="stylesheet" href="../css/productListing.css">
+  <link rel="stylesheet" href="/css/variables.css">
+  <link rel="stylesheet" href="/css/utility.css">
+  <link rel="stylesheet" href="/css/productListing.css">
   <link rel="stylesheet" href="/css/proGrid.css">
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   
   <title>Document</title>
 </head>
