create project data with details and render limited items in UI

--- a/pages/proGrid.html
+++ b/pages/proGrid.html
@@ -252,5 +252,6 @@
         document.querySelector('.footer-placeholder').innerHTML = data;
         });
 </script>
+<script src="/script/main.js"></script>
 </body>
 </html>
