--- a/pages/productListing.html
+++ b/pages/productListing.html
@@ -70,27 +70,27 @@
             <ul class="filter-list checkbox-list"  id="brand-filter">
                 <li>
                     <label>
-                        <input type="checkbox"> <span>Samsung</span>
+                        <input type="checkbox" onchange="updateFilter('brand', 'Samsung')"> <span>Samsung</span>
                     </label>
                 </li>
                 <li>
                     <label>
-                        <input type="checkbox"> <span>Apple</span>
+                        <input type="checkbox" onchange="updateFilter('brand', 'Apple')"> <span>Apple</span>
                     </label>
                 </li>
                 <li>
                     <label>
-                        <input type="checkbox"> <span>Huawei</span>
+                        <input type="checkbox" onchange="updateFilter('brand', 'huawei')"> <span>Huawei</span>
                     </label>
                 </li>
                 <li>
                     <label>
-                        <input type="checkbox"> <span>Pocco</span>
+                        <input type="checkbox" onchange="updateFilter('brand', 'pocco')"> <span>Pocco</span>
                     </label>
                 </li>
                 <li>
                     <label>
-                        <input type="checkbox"> <span>Lenovo</span>
+                        <input type="checkbox" onchange="updateFilter('brand', 'lenovo')"> <span>Lenovo</span>
                     </label>
                 </li>
                 <li><a href="#" class="view-all">See all</a></li>
@@ -105,17 +105,17 @@
     <ul class="filter-list checkbox-list" id="features-filter">
         <li>
             <label>
-                <input type="checkbox"> <span>Metallic</span>
+                <input type="checkbox" onchange="updateFilter('features', 'metallic')"> <span>Metallic</span>
             </label>
         </li>
         <li>
             <label>
-                <input type="checkbox"> <span>Plastic cover</span>
+                <input type="checkbox" onchange="updateFilter('features', 'Plastic')"> <span>Plastic cover</span>
             </label>
         </li>
         <li>
             <label>
-                <input type="checkbox"> <span>8GB Ram</span>
+                <input type="checkbox" onchange="updateFilter('features', '8GB Ram')"> <span>8GB Ram</span>
             </label>
         </li>
         <li>
