--- a/index.html
+++ b/index.html
@@ -161,35 +161,35 @@
     <h3>Our extra services</h3>
     <div class="extra-services-items">
       <article class="extra-service-item">
-        <div class="bg-image-section">
+        <div class="bg-image-section" id="extra-service-1">
         </div>
         <p>Source and industry hub</p>
         <div class="icon">
-          <img src="assets/icons/control/Vector-1.png" width="24px" alt="">
+          <img src="assets/icons/extraServices/Vector-1.png" width="17px" alt="">
         </div>
       </article>
       <article class="extra-service-item">
-        <div class="bg-image-section">
+        <div class="bg-image-section" id="extra-service-2">
         </div>
-        <p>Source and industry hub</p>
+        <p>Customize Your Products</p>
         <div class="icon">
-          <img src="assets/icons/control/Vector-1.png" width="24px" alt="">
+          <img src="assets/icons/extraServices/Vector.png" width="17px" alt="">
         </div>
       </article>
       <article class="extra-service-item">
-        <div class="bg-image-section">
+        <div class="bg-image-section" id="extra-service-3">
         </div>
-        <p>Source and industry hub</p>
+        <p>Fast, reliable shipping by ocean or air</p>
         <div class="icon">
-          <img src="assets/icons/control/Vector-1.png" width="24px" alt="">
+          <img src="assets/icons/extraServices/pro.png" width="17px" alt="">
         </div>
       </article>
       <article class="extra-service-item">
-        <div class="bg-image-section">
+        <div class="bg-image-section" id="extra-service-4">
         </div>
-        <p>Source and industry hub</p>
+        <p>Product monitoring and inspection</p>
         <div class="icon">
-          <img src="assets/icons/control/Vector-1.png" width="24px" alt="">
+          <img src="assets/icons/extraServices/inspection.png" width="17px" alt="">
         </div>
       </article>
     </div>
