Refactor related products layout to use flexbox for better responsiveness; update cart item count display and improve product specifications in JSON data.

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -17,7 +17,7 @@
   <section class="cart-section">
     <div class="cart-container">
         
-        <h2>My cart (3)</h2>
+        <h2>My cart (<span id="totalCartItems"></span>)</h2>
 
         <div class="cart-layout">
             
