--- a/pages/productDetail.html
+++ b/pages/productDetail.html
@@ -151,7 +151,7 @@
                   
                   <div class="supplier-details">
                       <div class="detail-item">
-                          <img src="../assets/icons/germany-flag.png" alt="flag" class="icon-flag">
+                          <img src="../assets/Layout1/Image/flags/DE@2x.png" alt="flag" class="icon-flag">
                           <span class="seller-country">Germany, Berlin</span>
                       </div>
                       <div class="detail-item">
