Refactor footer and header components; update subNavBar styles and functionality; enhance cart and product detail pages with improved UI/UX; optimize CSS for responsiveness and aesthetics; remove unused JavaScript file; implement dynamic cart item handling and notifications.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="cdnjs.cloudflare.com" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-<link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Permanent+Marker&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/utility.css">
   <link rel="stylesheet" href="css/variables.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -25,9 +26,9 @@
       </ul>
     </nav>
     <div class="main-banner normal-text">
-      <h3>Latest Trending</h3>
-      <h2>Electronics Items</h2>
-      <button class="learn-more">Learn More</button>
+      <h3 class="font2 base-color">Latest Trending</h3>
+      <h2 class="font1 base-color">Electronics Items</h2>
+      <button class="learn-more cursor font4">Learn More</button>
     </div>
     <div class="left-main-box">
     <div class="user">
@@ -40,12 +41,10 @@
       <button class="join-now normal-text" >Join Now</button>
       <button class="logIn normal-text">Log In</button>
     </div>
-    <div class="discount normal-text">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, qui?
-
+    <div class="discount">Get US $10 off with a new supplier
     </div>
-    <div class="suplier normal-text">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+    <div class="suplier ">
+    Send quotes with supplier preferences
     </div>
 </div>
   </div>
@@ -53,24 +52,24 @@
 <section class="deal-section">
   <div class="deal-and-offers flex ">
    <div class="deal-timer">
-    <h2>Deals and Offers</h2>
-    <p>Hygiene and equipment</p>
+    <h2 class="font3 base-color">Deals and Offers</h2>
+    <p class="opacity">Hygiene and equipment</p>
     <div class="timer flex">
       <div class="time-box">
-        <span class="number">02</span>
-        <span class="label">Days</span>
+        <span class="number font4">02</span>
+        <span class="label font5">Days</span>
       </div>
       <div class="time-box">
-        <span class="number">10</span>
-        <span class="label">Hours</span>
+        <span class="number font4">10</span>
+        <span class="label font5">Hours</span>
       </div>
-      <div class="time-box">
-        <span class="number">30</span>
+      <div class="time-box font5">
+        <span class="number font4">30</span>
         <span class="label">Min</span>
       </div>
       <div class="time-box">
-        <span class="number">50</span>
-        <span class="label">Sec
+        <span class="number font4">50</span>
+        <span class="label font5">Sec
    </div>
       </div>
     </div>
@@ -82,7 +81,7 @@
 <section class="category-section">
   <div class="category-container">
     <article class="main-category home-and-outdoor-main-category">
-      <h2>Home and outdoor</h2>
+      <h2 class="font3 base-color">Home and outdoor</h2>
       <button>Source now</button>
     </article>
     <div class="category-grid"></div>
@@ -90,7 +89,7 @@
 <section class="category-section " id="electronics">
   <div class="category-container" id="electronics-container">
     <article class="main-category electronics-main-category">
-      <h2>Consumer electronics and gadgets</h2>
+      <h2 class="font3 base-color ">Consumer electronics and gadgets</h2>
       <button>Source now</button>
     </article>
     <div class="category-grid" id ="electronics-grid"></div>
