--- a/pages/productDetail.html
+++ b/pages/productDetail.html
@@ -270,12 +270,17 @@
     </div>
 </section>
 
-<section class="related-products-section">
-    <h3>Related products</h3>
-    
-    <div class="related-grid">
-    </div>
+<section class="related-grid-section">
+    <main class="related-products-section">
+
+        <h3>Related products</h3>
+        
+        <div class="related-grid">
+        </div>
+    </main>
 </section>
+<div class="addToCartPopup">
+</div>
 <div class="discount-banner-placeholder"></div>
 <div class="footer-placeholder"></div>
 <script>
