Update page title from "Product Detail Page" to "Brand Home"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/variables.css">
   <link rel="stylesheet" href="css/styles.css">
   
-  <title>Product Detail Page</title>
+  <title>Brand Home</title>
 </head>
 <body>
  <div class="header-placeholder"></div>
