--- a/pages/cart.html
+++ b/pages/cart.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/variables.css">
     <link rel="stylesheet" href="/css/utility.css">
   <link rel="stylesheet" href="/css/productDetail.css">
-  <title>Document</title>
+  <title>Brand Cart</title>
 </head>
 <body>
     <div class="header-placeholder"></div>
