--- a/pages/productListing.html
+++ b/pages/productListing.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/css/proGrid.css">
   <link rel="stylesheet" href="/css/styles.css">
   
-  <title>Document</title>
+  <title>Brand Product Listing</title>
 </head>
 <body>
   <div class="header-placeholder"></div>
